--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:id="@+id/layout_portrait"
     tools:context=".MainActivity"
     android:baselineAligned="false">
 
@@ -15,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list"/>
 
     <fragment
         android:id="@+id/DetailFrag"
